--- a/index.html
+++ b/index.html
@@ -95,10 +95,13 @@
           <div>
             <p align="justify">
               &emsp;&ensp;I'm a BCA Graduate specially trained in JAVA by
-              <a href="https://www.linkedin.com/in/vikramshastry/?originalSubdomain=in">
+              <!-- <a href="https://www.linkedin.com/in/vikramshastry/?originalSubdomain=in"> -->
                 Vikram Shastry
-                </a>, an Excellent Trainer at
-              <a href="https://www.uttarainfo.com/">Uttara Info Solutions</a>
+                </a>
+                , an Excellent Trainer at
+              <!-- <a href="https://www.uttarainfo.com/"> -->
+                Uttara Info Solutions
+            <!-- </a> -->
               and I got placed as a junior fullstack developer at
               <a href="https://www.gale.agency/">GALE Creative Agency</a>, where
               I got to learn more about Web development just in four months and
