--- a/index.html
+++ b/index.html
@@ -94,16 +94,9 @@
           <h2 class="title2">Profile</h2>
           <div>
             <p align="justify">
-              &emsp;&ensp;I'm a BCA Graduate specially trained in JAVA by
-              <!-- <a href="https://www.linkedin.com/in/vikramshastry/?originalSubdomain=in"> -->
-                Vikram Shastry
-                </a>
-                , an Excellent Trainer at
-              <!-- <a href="https://www.uttarainfo.com/"> -->
-                Uttara Info Solutions
-            <!-- </a> -->
-              and I got placed as a junior fullstack developer at
-              <a href="https://www.gale.agency/">GALE Creative Agency</a>, where
+              &emsp;&ensp;I'm a BCA Graduate specially trained in JAVA by Vikram Shastry, an Excellent Trainer at
+                Uttara Info Solutions The Best Java Training Institute At Banglore, and I got placed as a junior fullstack developer at
+                GALE Creative Agency, where
               I got to learn more about Web development just in four months and
               I worked both on Front End - using REACT JavaScript Library and
               Back End - using Python-Django. Later I explored more on
