--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
           <h2 class="title2">Profile</h2>
           <div>
             <p align="justify">
-              &emsp;&ensp;I'm a BCA Graduate specially trained in JAVA by Vikram Shastry, an Excellent Trainer at
-                Uttara Info Solutions The Best Java Training Institute At Banglore, and I got placed as a junior fullstack developer at
-                GALE Creative Agency, where
-              I got to learn more about Web development just in four months and
-              I worked both on Front End - using REACT JavaScript Library and
-              Back End - using Python-Django. Later I explored more on
-              technologies like some frameworks of CSS like Bootstrap, tailwind,
-              React and JavaScript.
+              &emsp;&ensp;I'm a BCA Graduate specially trained in JAVA by Vikram
+              Shastry, an Excellent Trainer at Uttara Info Solutions The Best
+              Java Training Institute At Banglore, and I got placed as a junior
+              fullstack developer at GALE Creative Agency, where I got to learn
+              more about Web development just in four months and I worked both
+              on Front End - using REACT JavaScript Library and Back End - using
+              Python-Django. Later I explored more on technologies like some
+              frameworks of CSS like Bootstrap, tailwind, React and JavaScript.
             </p>
           </div>
         </div>
