Added Accordian for Education Section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mahabal | Résumé</title>
-    <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <script src="./java-script/index.js" defer></script>
     <script
       src="https://kit.fontawesome.com/70d67e3bbf.js"
       crossorigin="anonymous"
@@ -34,7 +35,8 @@
             </li>
             <li>
               <span class="icon"><i class="fa-solid fa-globe"></i></span>
-              <span class="text">www.mywebsite.com</span>
+              <span class="text"> <a href="https://mahabal1995.github.io/Mahabal-Resume/">My Website</a>
+                </span>
             </li>
             <li>
               <span class="icon"><i class="fa-brands fa-linkedin"></i></span>
@@ -102,13 +104,45 @@
               on Front End - using REACT JavaScript Library and Back End - using
               Python-Django. Later I explored more on technologies like some
               frameworks of CSS like Bootstrap, tailwind, React and JavaScript.
+              At present I'm working as a Lab Instructor at Uttara Info Solutions...
             </p>
           </div>
         </div>
 
         <div class="education">
-          <h3 class="title2">Education</h3>
-          <ul>
+          <h2 class="title2">Education</h2>
+
+          <button class="btn btn-one">
+            Bachelors of Computer Applications (B.C.A)
+            <i class="fa-solid fa-circle-chevron-down arrow-one" style="padding: 4px;"></i>
+          </button>
+          <div class="panel panel-one">
+            <p> <span>Passed out</span> : 2019 </h2>
+            <p> <span>University</span> : Manglore University </h2>
+            <p> <span>College</span> : M.G.M Degree College </h2>
+            <p> <span>Score</span> : 87.13 % </h2>
+          </div>
+
+          <button class="btn btn-two">
+            Pre University College (P.U.C / 12th)
+            <i class="fa-solid fa-circle-chevron-down arrow-two" style="padding: 4px;"></i>
+          </button>
+          <div class="panel panel-two">
+            <p> <span>Passed out</span> : 2019 </h2>
+            <p> <span>College</span> : Sadvidya Semi-Residential P.U.College, Mysore </h2>
+            <p> <span>Score</span> : 84.33 % </h2>
+          </div>
+
+          <button class="btn btn-three">
+            Secondary School Leaving Certificate (S.S.L.C / 10th)
+            <i class="fa-solid fa-circle-chevron-down arrow-three" style="padding: 4px;"></i>
+          </button>
+          <div class="panel panel-three">
+            <p> <span>Passed out</span> : 2011 </h2>
+            <p> <span>School</span> : Pushpa English Medium School, Periyapatna </h2>
+            <p> <span>Score</span> : 95.68 % </h2>
+          </div>
+          <!-- <ul>
             <li>
               <h5>2019</h5>
               <h4>Bachelors Of Computer Applications</h4>
@@ -127,7 +161,7 @@
               <h4>Score - 95.68 %</h4>
               <h4>Karnataka State Board</h4>
             </li>
-          </ul>
+          </ul> -->
         </div>
 
         <div class="about skills">
