--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
             <i class="fa-solid fa-circle-chevron-down arrow-one" style="padding: 4px;"></i>
           </button>
           <div class="panel panel-one">
-            <p> <span>Passed out</span> : 2019 </h2>
-            <p> <span>University</span> : Manglore University </h2>
-            <p> <span>College</span> : M.G.M Degree College </h2>
-            <p> <span>Score</span> : 87.13 % </h2>
+            <p> <span>Passed out</span> : 2019 </p>
+            <p> <span>University</span> : Manglore University </p>
+            <p> <span>College</span> : M.G.M Degree College </p>
+            <p> <span>Score : 87.13 %</span>  </p>
           </div>
 
           <button class="btn btn-two">
@@ -128,9 +128,9 @@
             <i class="fa-solid fa-circle-chevron-down arrow-two" style="padding: 4px;"></i>
           </button>
           <div class="panel panel-two">
-            <p> <span>Passed out</span> : 2019 </h2>
-            <p> <span>College</span> : Sadvidya Semi-Residential P.U.College, Mysore </h2>
-            <p> <span>Score</span> : 84.33 % </h2>
+            <p> <span>Passed out</span> : 2019 </p>
+            <p> <span>College</span> : Sadvidya Semi-Residential P.U.College, Mysore </p>
+            <p> <span>Score : 84.33 %</span></p>
           </div>
 
           <button class="btn btn-three">
@@ -138,9 +138,9 @@
             <i class="fa-solid fa-circle-chevron-down arrow-three" style="padding: 4px;"></i>
           </button>
           <div class="panel panel-three">
-            <p> <span>Passed out</span> : 2011 </h2>
-            <p> <span>School</span> : Pushpa English Medium School, Periyapatna </h2>
-            <p> <span>Score</span> : 95.68 % </h2>
+            <p> <span>Passed out</span> : 2011 </p>
+            <p> <span>School</span> : Pushpa English Medium School, Periyapatna </p>
+            <p> <span>Score : 95.68 % </span> </p>
           </div>
           <!-- <ul>
             <li>
