--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mahabal | Résumé</title>
     <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="stylesheet" href="./CSS/skillsStyles.css">
     <script src="./java-script/index.js" defer></script>
     <script
       src="https://kit.fontawesome.com/70d67e3bbf.js"
@@ -58,13 +59,13 @@
           <h3 class="title">Languages</h3>
           <ul>
             <li>
-              <span class="text">English</span>
+              <span class="text">Kannada</span>
               <span class="percent">
-                <div style="width: 95%"></div>
+                <div style="width: 98%"></div>
               </span>
             </li>
             <li>
-              <span class="text">Kannada</span>
+              <span class="text">English</span>
               <span class="percent">
                 <div style="width: 98%"></div>
               </span>
@@ -101,7 +102,7 @@
               Java Training Institute At Banglore, and I got placed as a junior
               fullstack developer at GALE Creative Agency, where I got to learn
               more about Web development just in four months and I worked both
-              on Front End - using REACT JavaScript Library and Back End - using
+              on Front End, using REACT JavaScript Library and Back End, using
               Python-Django. Later I explored more on technologies like some
               frameworks of CSS like Bootstrap, tailwind, React and JavaScript.
               At present I'm working as a Lab Instructor at Uttara Info Solutions...
@@ -142,68 +143,56 @@
             <p> <span>School</span> : Pushpa English Medium School, Periyapatna </p>
             <p> <span>Score : 95.68 % </span> </p>
           </div>
-          <!-- <ul>
-            <li>
-              <h5>2019</h5>
-              <h4>Bachelors Of Computer Applications</h4>
-              <h4>Score - 87.13 %</h4>
-              <h4>Manglore University</h4>
-            </li>
-            <li>
-              <h5>2013</h5>
-              <h4>Pre-University College</h4>
-              <h4>Score - 84.33 %</h4>
-              <h4>Karnataka State Board</h4>
-            </li>
-            <li>
-              <h5>2011</h5>
-              <h4>Secondary School Education</h4>
-              <h4>Score - 95.68 %</h4>
-              <h4>Karnataka State Board</h4>
-            </li>
-          </ul> -->
         </div>
 
         <div class="about skills">
           <h2 class="title2">Professional Skills</h2>
-          <div class="box">
-            <h4>Core JAVA</h4>
-            <div class="percent">
-              <div style="width: 95%"></div>
+          <div class="container-one">
+            <div class="box">
+              <div>
+                <h2>Java</h2>
+                <p>80%</p>
+              </div>
             </div>
-          </div>
-          <div class="box">
-            <h4>HTML</h4>
-            <div class="percent">
-              <div style="width: 95%"></div>
+            <div class="box">
+              <div>
+                <h2>HTML</h2>
+                <p>90%</p>
+              </div>
             </div>
-          </div>
-          <div class="box">
-            <h4>CSS</h4>
-            <div class="percent">
-              <div style="width: 85%"></div>
+            <div class="box">
+              <div>
+                <h2>CSS</h2>
+                <p>85%</p>
+              </div>
             </div>
-          </div>
-          <div class="box">
-            <h4>JavaScript-React</h4>
-            <div class="percent">
-              <div style="width: 80%"></div>
+            <div class="box">
+              <div>
+                <h2>JS</h2>
+                <p>75%</p>
+              </div>
             </div>
-          </div>
-          <div class="box">
-            <h4>Python-Django</h4>
-            <div class="percent">
-              <div style="width: 65%"></div>
+            <div class="box">
+              <div>
+                <h2>React</h2>
+                <p>60%</p>
+              </div>
             </div>
-          </div>
-          <div class="box">
-            <h4>Git & Git-Hub</h4>
-            <div class="percent">
-              <div style="width: 60%"></div>
+            <div class="box">
+              <div>
+                <h2>Python</h2>
+                <p>40%</p>
+              </div>
+            </div>
+            <div class="box">
+              <div>
+                <h2>GitHub</h2>
+                <p>80%</p>
+              </div>
             </div>
           </div>
         </div>
-
+        
         <div class="about interest">
           <h2 class="title2">Interests</h2>
           <ul>
