added mailto link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </li>
             <li>
               <span class="icon"><i class="fa-solid fa-envelope"></i></span>
-              <span class="text">mahabalshrivatsa95@gmail.com</span>
+              <span class="text"><a href="mailto:mahabalshrivatsa95@gmail.com">Mail Me</a> </span>
             </li>
             <li>
               <span class="icon"><i class="fa-solid fa-globe"></i></span>
@@ -192,7 +192,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="about interest">
           <h2 class="title2">Interests</h2>
           <ul>
