Added Download Resume Button and functionality

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="imgBx">
             <img src="./Images/ProfilePic.png" alt="My Pic" />
           </div>
-          <h2>Mahabal P S <br /><span>Full-Stack Developer</span></h2>
+          <h2>Mahabal P S <br /><span>Full-Stack Developer <br> mahabalshrivatsa95@gmail.com</span></h2>
         </div>
 
         <div class="contact-info">
@@ -89,6 +89,12 @@
               </span>
             </li>
           </ul>
+        </div>
+
+        <div class="resume-btn">
+          <a href="MAHABAL_BCA_Resume.pdf" download="MAHABAL_BCA_Resume">
+            Download My Resume
+          </a>
         </div>
       </div>
 
