--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mahabal | Résumé</title>
     <link rel="stylesheet" href="./CSS/styles.css" />
-    <link rel="stylesheet" href="./CSS/skillsStyles.css">
+    <link rel="stylesheet" href="./CSS/skillsStyles.css" />
     <script src="./java-script/index.js" defer></script>
     <script
       src="https://kit.fontawesome.com/70d67e3bbf.js"
@@ -20,7 +20,12 @@
           <div class="imgBx">
             <img src="./Images/ProfilePic.png" alt="My Pic" />
           </div>
-          <h2>Mahabal P S <br /><span>Full-Stack Developer <br> mahabalshrivatsa95@gmail.com</span></h2>
+          <h2>
+            Mahabal P S <br /><span
+              >Full-Stack Developer <br />
+              mahabalshrivatsa95@gmail.com</span
+            >
+          </h2>
         </div>
 
         <div class="contact-info">
@@ -32,12 +37,17 @@
             </li>
             <li>
               <span class="icon"><i class="fa-solid fa-envelope"></i></span>
-              <span class="text"><a href="mailto:mahabalshrivatsa95@gmail.com">Mail Me</a> </span>
+              <span class="text"
+                ><a href="mailto:mahabalshrivatsa95@gmail.com">Mail Me</a>
+              </span>
             </li>
             <li>
               <span class="icon"><i class="fa-solid fa-globe"></i></span>
-              <span class="text"> <a href="https://mahabal1995.github.io/Mahabal-Resume/">My Website</a>
-                </span>
+              <span class="text">
+                <a href="https://mahabal1995.github.io/Mahabal-Resume/"
+                  >My Website</a
+                >
+              </span>
             </li>
             <li>
               <span class="icon"><i class="fa-brands fa-linkedin"></i></span>
@@ -53,6 +63,12 @@
               <span class="text">Periyapatna - 571107, Mysuru</span>
             </li>
           </ul>
+        </div>
+
+        <div class="resume-btn">
+          <a href="MAHABAL_BCA_Resume.pdf" download="MAHABAL_BCA_Resume">
+            Download My Résumé
+          </a>
         </div>
 
         <div class="contact-info language">
@@ -90,12 +106,6 @@
             </li>
           </ul>
         </div>
-
-        <div class="resume-btn">
-          <a href="MAHABAL_BCA_Resume.pdf" download="MAHABAL_BCA_Resume">
-            Download My Resume
-          </a>
-        </div>
       </div>
 
       <div class="right-side">
@@ -111,7 +121,8 @@
               on Front End, using REACT JavaScript Library and Back End, using
               Python-Django. Later I explored more on technologies like some
               frameworks of CSS like Bootstrap, tailwind, React and JavaScript.
-              At present I'm working as a Lab Instructor at Uttara Info Solutions...
+              At present I'm working as a Lab Instructor at Uttara Info
+              Solutions...
             </p>
           </div>
         </div>
@@ -121,33 +132,47 @@
 
           <button class="btn btn-one">
             Bachelors of Computer Applications (B.C.A)
-            <i class="fa-solid fa-circle-chevron-down arrow-one" style="padding: 4px;"></i>
+            <i
+              class="fa-solid fa-circle-chevron-down arrow-one"
+              style="padding: 4px"
+            ></i>
           </button>
           <div class="panel panel-one">
-            <p> <span>Passed out</span> : 2019 </p>
-            <p> <span>University</span> : Manglore University </p>
-            <p> <span>College</span> : M.G.M Degree College </p>
-            <p> <span>Score : 87.13 %</span>  </p>
+            <p><span>Passed out</span> : 2019</p>
+            <p><span>University</span> : Manglore University</p>
+            <p><span>College</span> : M.G.M Degree College</p>
+            <p><span>Score : 87.13 %</span></p>
           </div>
 
           <button class="btn btn-two">
             Pre University College (P.U.C / 12th)
-            <i class="fa-solid fa-circle-chevron-down arrow-two" style="padding: 4px;"></i>
+            <i
+              class="fa-solid fa-circle-chevron-down arrow-two"
+              style="padding: 4px"
+            ></i>
           </button>
           <div class="panel panel-two">
-            <p> <span>Passed out</span> : 2019 </p>
-            <p> <span>College</span> : Sadvidya Semi-Residential P.U.College, Mysore </p>
-            <p> <span>Score : 84.33 %</span></p>
+            <p><span>Passed out</span> : 2019</p>
+            <p>
+              <span>College</span> : Sadvidya Semi-Residential P.U.College,
+              Mysore
+            </p>
+            <p><span>Score : 84.33 %</span></p>
           </div>
 
           <button class="btn btn-three">
             Secondary School Leaving Certificate (S.S.L.C / 10th)
-            <i class="fa-solid fa-circle-chevron-down arrow-three" style="padding: 4px;"></i>
+            <i
+              class="fa-solid fa-circle-chevron-down arrow-three"
+              style="padding: 4px"
+            ></i>
           </button>
           <div class="panel panel-three">
-            <p> <span>Passed out</span> : 2011 </p>
-            <p> <span>School</span> : Pushpa English Medium School, Periyapatna </p>
-            <p> <span>Score : 95.68 % </span> </p>
+            <p><span>Passed out</span> : 2011</p>
+            <p>
+              <span>School</span> : Pushpa English Medium School, Periyapatna
+            </p>
+            <p><span>Score : 95.68 % </span></p>
           </div>
         </div>
 
